tests/invalid/sum_list_wrong_start_type/main.py
def run_case() -> None:
    xs: list[int] = [1, 2, 3]

    x: int = sum(xs, 1.5)

if __name__ == "__main__":
    run_case()
